# custom-g4ndl-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
misc/: draw_comparison.ipynb  draw_comparison.py
src/custom_g4ndl_generator/: __init__.py  __main__.py  adjust.py  cli.py  g4ndl.py  sources.py
src/custom_g4ndl_generator/data/: 76GE_XS.README
tests/: test_adjust.py  test_cli.py  test_g4ndl.py
tests/data/mini_lib/TESTLIB/Capture/CrossSection/: 32_76_Germanium
tests/data/mini_lib/TESTLIB/Elastic/CrossSection/: 32_74_Germanium
