[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-g4ndl-generator"
version = "0.1.0"
description = "Generate custom G4NDL neutron-data libraries with an adjusted Ge-76(n,γ) capture cross section"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LEGEND Collaboration" }]
keywords = ["geant4", "g4ndl", "neutron", "cross-section", "legend"]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/legend-exp/custom-g4ndl-generator"
Issue = "https://github.com/legend-exp/legend-simflow/issues/265"

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "pre-commit", "black", "pydocstyle"]

[project.scripts]
custom-g4ndl = "custom_g4ndl_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custom_g4ndl_generator = ["data/*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pydocstyle]
convention = "numpy"
match-dir = "custom_g4ndl_generator"
